# iothsm-ta-add

./: .gitmodules
edgelet/hsm-sys/azure-iot-hsm-c/: .gitignore  CMakeLists.txt
edgelet/hsm-sys/azure-iot-hsm-c/src/: edge_hsm_client_crypto.c  hsm_client_tpm_device.c  hsm_client_tpm_in_mem.c
edgelet/hsm-sys/azure-iot-hsm-ta/ta/: ta.sln  vssettings.props
edgelet/hsm-sys/azure-iot-hsm-ta/ta/common/: common.h
edgelet/hsm-sys/azure-iot-hsm-ta/ta/enc/: CMakeLists.txt  enc.c  enc.edl  enc.vcxproj  enc.vcxproj.filters  enc_args.h  enc_private.pem  enc_t.c  enc_t.h  enc_u.c  enc_u.h
edgelet/hsm-sys/azure-iot-hsm-ta/ta/lib/: lib.vcxproj
